option java_outer_classname = "LCStatusType";
option java_package = "com.navinfo.opentsp.platform.location.protocol.common";

enum StatusType{
    dpfPressure	           =0x01;
    relativePressure	   =0x02;
    intakeAirTem	       =0x03;
    absolutePressure	   =0x04;
    exhaustTem	           =0x05;
    atmosphericPressure	   =0x06;
    engineTem	           =0x07;
    atmosphericTem	       =0x08;
    pavementTem	           =0x09;
    lampStatus	           =0x0A;
    mileage	               =0x0B;
    waterInOilStatus	   =0x0C;
    oilValue	           =0x0E;
    rotation	           =0x0F;

    fuelPressure		    =0x10;
    oilLevel		        =0x11;
    oilPressure		        =0x12;
    coolantLevel		    =0x13;
    coolingWaterTem		    =0x14;
    fuelTem		            =0x15;
    oilTem		            =0x16;
    ureaTankLiquidLevel	    =0x17;
    ureaTankTem		        =0x18;
    cumulativeRunningTime   =0x19;
    cumulativeTurningNumber	=0x1A;
    fuelConsumptionRate		=0x1B;
    averageFuelConsumption	=0x1C;
    dayFuelConsumption      =0x1D;
    totalFuelConsumption	=0x1E;
    engineTorMode	=0x1F;
    driverEnginePercentTor	=0x20;
    actualEnginePercentTor	=0x21;
    accPedalLowIdleSwitch	=0x22;
    accPedalKickdownSwitch	=0x23;
    accPedalPos	=0x24;
    percentLoadAtCurrentSpd	=0x25;
    nominalFrictionPercentTrq	=0x26;
    parkingBrakeSwitch	=0x27;
    cruiseCtrlActive	=0x28;
    brakeSwitch	=0x29;
    clutchSwitch	=0x2A;
    cruiseCtrlSetSwitch	=0x2B;
    cruiseCtrlCoastSwitch	=0x2C;
    cruiseCtrlResumeSwitch	=0x2D;
    cruiseCtrlAccSwitch	=0x2E;
    cruiseCtrlSetSpd	=0x2F;
    cruiseCtrlStates	=0x30;
    tripDistance	=0x31;
    realTimeOilConsumption	=0x32;
    wheelBasedVehicleSpd	=0x33;
    outPutRoateSpeed  =0x34;
    tachographVehicleSpeed=0x35;
    currentGear=0x36;
    tripFuel=0x37;
    truboOilTem=0x38;
    batteryPot=0x39;
    engineProtection=0x3A;
    P1Speed=0x3B;
    P1Torque=0x3C;
    P3Speed=0x3D;
    P3Torque=0x3E;
    P4Speed=0x3F;
    P4Troque=0x40;
    P5Speed=0x41;
    P5Torque=0x42;
    P6Speed=0x43;
    gainSpeed=0x44;
    RefEngineTorque=0x45;
    MaxSpeedLimit=0x46;
    MaxTimeLimit=0x47;
    SpLowerLimit=0x48;
    SpUpperLimit=0x49;
    TorLowerLimit=0x4A;
    TorUpperLimit=0x4B;
    ReqSpUpperLimit=0x4C;
    MomentIner=0x4D;
    RelEngOilPressure=0x4E;
    engOilPreLow=0x4F;
    engCoolTem=0x50;
    StartHeartStat=0x51;
    OBDLampStatus=0x52;
    ExOutput=0x53;
    EsFanSp=0x54;
    FanDriState=0x55;
    FanSpeed=0x56;
    airFilterPre=0x57;
    CoolDifferTem=0x58;
    AirInTem=0x59;
    perTorResolution=0x5A;
    addControlDevice=0x5B;
    engineStartMode=0x5C;
    engineDePerTor=0x5D;
    speedLimitStatus=0x5E;
    reAccPosition=0x5F;
    reAccPosition2=0x60;
    maxAvailableEngPerTor=0x61;
    desirOperaSpeed=0x62;
    engAsyAdjust=0x63;
    EstimaParLoss=0x64;
    exhGasMassflow=0x65;
    af1Intake=0x66;
    af1Exhaust=0x67;
    af2Intake=0x68;
    af2Exhaust=0x69;
    cruPauseSwitch=0x6A;
    cruiControlEnable=0x6B;
    ptoState=0x6C;
    engShutOverSwitch=0x6D;
    engTestModeWwitch=0x6E;
    engIdleDecSwitch=0x6F;
    engIdleIncSwitch=0x70;
    retarTorMode=0x71;
    retBrakeAssSwitch=0x72;
    retShiftAssSwitch=0x73;
    actRetTorPer=0x74;
    intRetPerTor=0x75;
    coolLoadIncrease=0x76;
    retReqBrakeLight=0x77;
    addOfControDevice=0x78;
    demRetPerTor=0x79;
    retSwitchPerTor=0x7A;
    actMaxAvailableRetPerTor=0x7B;
    retarderLocation=0x7C;
    retarderType=0x7D;
    retarderConMethod=0x7E;
    retarderSpIdlePoint1=0x7F;
    retarderPerTorIdle=0x80;
    maxRetSpeedPoint2=0x81;
    retPerTorMaxSpeedPoint2=0x82;
    engSpeedPoint3=0x83;
    retarderPerTorPoint3=0x84;
    engSpeedPoint4=0x85;
    retarderPerTorPoint4=0x86;
    retSpeedTorPoint5=0x87;
    refRetarTorque=0x88;
    retarderPerTorPoint5=0x89;
    extendCrankcase=0x8A;
    engineInterTemper=0X8B;
    batteryPotInput1=0X8C;
    P2HighestSpeed=0X8D;
    P2PercentTorSpeed=0X8E;
    TripDistanceDD=0x8F;
    mileageDD=0x90;
    lng1Gross=0x91;
    lng1Surplus=0x92;
    lng2Gross=0x93;
    lng2Surplus=0x94;
    lng3Gross=0x95;
    lng3Surplus=0x96;
    lng4Gross=0x97;
    lng4Surplus=0x98;
    p2Speed=0x99;
    p2Torque=0x9A;
    ureaConcentration=0x9B;
    integralFuelConsumption=0x9C;
    protectLamp	=0x9D;
    stopLamp	=0x9F;
    milLamp	=0xA1;
    scrLamp	=0xA2;
    amberWarningLamp	=0xA3;
    differentialMileage	=0xA4;
    circleType  =0xA5;
    roteSpeed   =0xA6;
    forewardCount   =0xA7;
    reverseCount    =0xA8;
    avgGasConsumption = 0xA9;
    totalGasConsumption = 0xAA;
    integralGasConsumption = 0xAB;
    actualPumpState = 0xAC;
    dynamicLoad = 0xAD;
    lampState   =0xAE;
    integralMileage = 0xAF;
    integralOilConsumption = 0xB1;
    targetGear  =0xB2;
    realSpeedRatio  =0xB3;
}