option java_outer_classname = "LCCallNameRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.query";

import "core/proto/common/java/LocationData.proto";
import "core/proto/common/java/ResponseResult.proto";

message CallNameRes{
	required	int32	serialNumber		=1;
	required	ResponseResult	result		=2;
	optional	LocationData	data		=3;
}
